argo-workflows/overlays/dex-sso.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      containers:
        - name: argo-server
          args:
            - server
            - --auth-mode=sso
          volumeMounts:
            - name: ca
              mountPath: /etc/ssl/certs/ca.crt
              subPath: ca.crt
              readOnly: true
      volumes:
        - name: ca
          configMap:
            name: ca
